compiler/testData/javaModules/jdkModulesFromNamed/main.txt
compiler/testData/javaModules/jdkModulesFromNamed/main/test.kt:11:24: error: unresolved reference: httpserver
    val s: com.sun.net.httpserver.HttpServer? = null
                       ^
COMPILATION_ERROR
